Fix scrolling issue around Reviews Drawer on mobile devices
HAVEN-1

--- a/app/assets/stylesheets/workarea/storefront/components/_product_detail_container.scss
+++ b/app/assets/stylesheets/workarea/storefront/components/_product_detail_container.scss
@@ -109,6 +109,7 @@ $product-detail-container-section-back-icon-color: $link-color !default;
         .product-detail-container__section--open-overlay {
             visibility: visible;
             transform: translateX(0%);
+            overflow-y: scroll;
         }
 
         .product-detail-container__section--description {
